Utils/AutoZoom/Utils/emICCD/Final MonoControl 5.2.4 install/SpectraPro_SDK/ARC_SpectraPro_SDK/VC++_Examples/Setup_Example/ARC_SpectraPro_dll.h

// function definitions
typedef unsigned _int16 (CALLBACK* LPFNDLL_Ver) (long &, long &, long &);
//Communications
typedef unsigned _int16 (CALLBACK* LPFNDLL_Search_For_Mono) (long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Open_Mono) (long,long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Close_Mono) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Valid_Mono_Enum) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Focallength) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_HalfAngle) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_DetectorAngle) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Double) (long, unsigned _int16 &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Precision) (long);
//Wavelength
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_nm) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_nm) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_ang) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_ang) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_eV) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_eV) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_micron) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_micron) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_absCM) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_absCM) (long, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_relCM) (long, double, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Wavelength_relCM) (long, double, double);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_Cutoff_nm) (long, double &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Wavelength_Min_nm) (long, double &);
LPFNDLL_Ver ARC_Ver;       // function pointer to ARC_Ver
//Communications
LPFNDLL_Search_For_Mono                ARC_Search_For_Mono;
LPFNDLL_Open_Mono                      ARC_Open_Mono;
LPFNDLL_Close_Mono                     ARC_Close_Mono;
LPFNDLL_Valid_Mono_Enum                ARC_Valid_Mono_Enum;
LPFNDLL_get_Mono_Focallength           ARC_get_Mono_Focallength;
LPFNDLL_get_Mono_HalfAngle             ARC_get_Mono_HalfAngle;
LPFNDLL_get_Mono_DetectorAngle         ARC_get_Mono_DetectorAngle;
LPFNDLL_get_Mono_Double                ARC_get_Mono_Double;
LPFNDLL_get_Mono_Precision             ARC_get_Mono_Precision;
//Wavelength
LPFNDLL_get_Mono_Wavelength_nm         ARC_get_Mono_Wavelength_nm;
LPFNDLL_set_Mono_Wavelength_nm         ARC_set_Mono_Wavelength_nm;
LPFNDLL_get_Mono_Wavelength_ang        ARC_get_Mono_Wavelength_ang;
LPFNDLL_set_Mono_Wavelength_ang        ARC_set_Mono_Wavelength_ang;
LPFNDLL_get_Mono_Wavelength_eV         ARC_get_Mono_Wavelength_eV;
LPFNDLL_set_Mono_Wavelength_eV         ARC_set_Mono_Wavelength_eV;
LPFNDLL_get_Mono_Wavelength_micron     ARC_get_Mono_Wavelength_micron;
LPFNDLL_set_Mono_Wavelength_micron     ARC_set_Mono_Wavelength_micron;
LPFNDLL_get_Mono_Wavelength_absCM      ARC_get_Mono_Wavelength_absCM;
LPFNDLL_set_Mono_Wavelength_absCM      ARC_set_Mono_Wavelength_absCM;
LPFNDLL_get_Mono_Wavelength_relCM      ARC_get_Mono_Wavelength_relCM;
LPFNDLL_set_Mono_Wavelength_relCM      ARC_set_Mono_Wavelength_relCM;
LPFNDLL_get_Mono_Wavelength_Cutoff_nm  ARC_get_Mono_Wavelength_Cutoff_nm;
LPFNDLL_get_Mono_Wavelength_Min_nm     ARC_get_Mono_Wavelength_Min_nm;