Utils/AutoZoom/Utils/PrincetonInstruments/emICCD/Final MonoControl 5.2.4 install/SpectraPro_SDK/ARC_SpectraPro_SDK/VB_Examples/VB_Example/DLL_Use_ExampleF.frm

VERSION 5.00
Begin VB.Form Form1 
   Caption         =   "Form1"
   ClientHeight    =   5775
   ClientLeft      =   60
   ClientTop       =   345
   ClientWidth     =   13125
   LinkTopic       =   "Form1"
   ScaleHeight     =   5775
   ScaleWidth      =   13125
   StartUpPosition =   3  'Windows Default
   Begin VB.TextBox CenterEdt 
      Height          =   375
      Left            =   11520
      TabIndex        =   14
      Top             =   1200
      Width           =   855
   End
   Begin VB.CommandButton SetWaveBtn 
      Caption         =   "Set Wavelength"
      Height          =   375
      Left            =   9600
      TabIndex        =   27
      Top             =   1680
      Width           =   1815
   End
   Begin VB.OptionButton relCMradio 
      Caption         =   "Relative WaveNumber"
      Height          =   255
      Left            =   9480
      TabIndex        =   33
      Top             =   1320
      Width           =   2055
   End
   Begin VB.OptionButton abscmradio 
      Caption         =   "Absolute WaveNumber"
      Height          =   255
      Left            =   9480
      TabIndex        =   32
      Top             =   1080
      Width           =   2055
   End
   Begin VB.OptionButton evradio 
      Caption         =   "eV"
      Height          =   255
      Left            =   9480
      TabIndex        =   31
      Top             =   840
      Width           =   1695
   End
   Begin VB.OptionButton micronradio 
      Caption         =   "micron"
      Height          =   255
      Left            =   9480
      TabIndex        =   30
      Top             =   600
      Width           =   1695
   End
   Begin VB.OptionButton nmradio 
      Caption         =   "nm"
      Height          =   255
      Left            =   9480
      TabIndex        =   29
      Top             =   360
      Width           =   1695
   End
   Begin VB.OptionButton angradio 
      Caption         =   "ang"
      Height          =   255
      Left            =   9480
      TabIndex        =   28
      Top             =   120
      Width           =   1695
   End
   Begin VB.ListBox List1 
      Height          =   5715
      Left            =   3840
      TabIndex        =   21
      Top             =   0
      Width           =   4335
   End
   Begin VB.TextBox RawCMDEdt 
      Height          =   375
      Left            =   0
      TabIndex        =   20
      Top             =   3600
      Width           =   3855
   End
   Begin VB.TextBox FilterEdt 
      Height          =   375
      Left            =   9360
      TabIndex        =   19
      Top             =   3960
      Width           =   855
   End
   Begin VB.TextBox SlitWidthEdt 
      Height          =   375
      Left            =   9360
      TabIndex        =   18
      Top             =   3480
      Width           =   855
   End
   Begin VB.TextBox SlitNumEdt 
      Height          =   375
      Left            =   8400
      TabIndex        =   17
      Top             =   3480
      Width           =   855
   End
   Begin VB.TextBox GratEdt 
      Height          =   375
      Left            =   9360
      TabIndex        =   16
      Top             =   2640
      Width           =   855
   End
   Begin VB.TextBox TurEdt 
      Height          =   375
      Left            =   9360
      TabIndex        =   15
      Top             =   2160
      Width           =   855
   End
   Begin VB.TextBox WaveEdt 
      Height          =   375
      Left            =   8280
      TabIndex        =   13
      Top             =   840
      Width           =   855
   End
   Begin VB.CommandButton HomeFilterBtn 
      Caption         =   "Home Filter"
      Height          =   375
      Left            =   11760
      TabIndex        =   12
      Top             =   3960
      Width           =   1215
   End
   Begin VB.CommandButton FilterPosBtn 
      Caption         =   "Set Filter"
      Height          =   375
      Left            =   10320
      TabIndex        =   11
      Top             =   3960
      Width           =   1215
   End
   Begin VB.CommandButton HomeSlitBtn 
      Caption         =   "Home Slit"
      Height          =   375
      Left            =   11760
      TabIndex        =   10
      Top             =   3480
      Width           =   1215
   End
   Begin VB.CommandButton SlitWidthBtn 
      Caption         =   "Set Slit Width"
      Height          =   375
      Left            =   10320
      TabIndex        =   9
      Top             =   3480
      Width           =   1215
   End
   Begin VB.CommandButton SetGratEdt 
      Caption         =   "Set Grating"
      Height          =   375
      Left            =   10320
      TabIndex        =   8
      Top             =   2640
      Width           =   1215
   End
   Begin VB.CommandButton SetTurBtn 
      Caption         =   "Set Turret"
      Height          =   375
      Left            =   10320
      TabIndex        =   7
      Top             =   2160
      Width           =   1215
   End
   Begin VB.CommandButton RawCMDBtn 
      Caption         =   "Raw CMD"
      Height          =   375
      Left            =   0
      TabIndex        =   6
      Top             =   4080
      Width           =   1215
   End
   Begin VB.CommandButton MonoInfoBtn 
      Caption         =   "Display Mono State"
      Height          =   375
      Left            =   720
      TabIndex        =   5
      Top             =   1800
      Width           =   1815
   End
   Begin VB.CommandButton CloseBtn 
      Caption         =   "Close Enum"
      Height          =   375
      Left            =   960
      TabIndex        =   4
      Top             =   1320
      Width           =   1215
   End
   Begin VB.CommandButton OpenBtn 
      Caption         =   "Open Enum"
      Height          =   375
      Left            =   960
      TabIndex        =   3
      Top             =   840
      Width           =   1215
   End
   Begin VB.TextBox EnumEdt 
      Height          =   375
      Left            =   0
      TabIndex        =   2
      Text            =   "Enum "
      Top             =   840
      Width           =   855
   End
   Begin VB.CommandButton FindMonoBtn 
      Caption         =   "Find Mono(s)"
      Height          =   375
      Left            =   0
      TabIndex        =   1
      Top             =   360
      Width           =   1215
   End
   Begin VB.CheckBox OpenChk 
      Caption         =   "Mono Open"
      Height          =   375
      Left            =   2280
      TabIndex        =   22
      Top             =   840
      Width           =   1575
   End
   Begin VB.Label RawCmdLabel 
      Caption         =   "Result :"
      Height          =   1575
      Left            =   1320
      TabIndex        =   26
      Top             =   4080
      Width           =   2535
   End
   Begin VB.Label CMDLabel 
      Caption         =   "Send Raw Mono Command"
      Height          =   375
      Left            =   0
      TabIndex        =   25
      Top             =   3240
      Width           =   3615
   End
   Begin VB.Label Label2 
      Caption         =   "Center nm"
      Height          =   255
      Left            =   12360
      TabIndex        =   24
      Top             =   1320
      Width           =   735
   End
   Begin VB.Label WaveLabel 
      Caption         =   "New Wavelength"
      Height          =   375
      Left            =   8280
      TabIndex        =   23
      Top             =   360
      Width           =   975
   End
   Begin VB.Label DLLLabel 
      Caption         =   "ARC_SpectraPro.dll ver. "
      Height          =   255
      Left            =   0
      TabIndex        =   0
      Top             =   0
      Width           =   2895
   End
End
Attribute VB_Name = "Form1"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed = False
'ARC_SpectraPro.dll functions
'High level Communications
Private Declare Function ARC_Search_For_Mono Lib "ARC_SpectraPro.dll" (Num_Found As Long) As Integer
Private Declare Function ARC_Open_Mono Lib "ARC_SpectraPro.dll" (ByVal Enum_Num As Long, Mono_Enum As Long) As Integer
Private Declare Function ARC_Close_Mono Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_Valid_Mono_Enum Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_get_Mono_preOpen_Model Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Model_Var As Variant) As Integer
Private Declare Function ARC_Ver Lib "ARC_SpectraPro.dll" (Majorval As Long, Minorval As Long, Buildval As Long) As Integer
'Direct Communications Function
Private Declare Function ARC_Send_CMD_To_Mono Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal SendCMD As Variant, RCV_Var As Variant, ByVal ms_Timeout As Long) As Integer

'Monochromator Information
Private Declare Function ARC_get_Mono_Model Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Model_str As Variant) As Integer
Private Declare Function ARC_get_Mono_Serial Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Serial_str As Variant) As Integer
Private Declare Function ARC_get_Mono_Focallength Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Focallength As Double) As Integer
Private Declare Function ARC_get_Mono_HalfAngle Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, HalfAngle As Double) As Integer
Private Declare Function ARC_get_Mono_DetectorAngle Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, DetectorAngle As Double) As Integer
Private Declare Function ARC_get_Mono_Double Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Double_Present As Integer) As Integer
Private Declare Function ARC_get_Mono_Precision Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Long

'Monochromator Wavelength
Private Declare Function ARC_get_Mono_Wavelength_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_ang Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_ang Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_eV Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_eV Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_micron Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_micron Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_absCM Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_absCM Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_relCM Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Center_nm As Double, Wavelength As Double) As Integer
Private Declare Function ARC_set_Mono_Wavelength_relCM Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Center_nm As Double, ByVal Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_Cutoff_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
Private Declare Function ARC_get_Mono_Wavelength_Min_nm Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Wavelength As Double) As Integer
